First commit without layout check

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# added
+design
+info.txt
+README-info.md
+README-next.md
+README.md
+style-guide.md
